compiling_error.txt
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c: In function 'valtree':
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:190:14: warning: comparison between pointer and integer
   if(n->info == NULL || n->info == 0)
              ^~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c: At top level:
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:272:1: error: unknown type name 'bool'
 bool isOperator(char c){
 ^~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c: In function 'isOperator':
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:273:74: error: 'true' undeclared (first use in this function)
     if (c == '+' || c == '-' || c == '*' || c == '/' || c == '^') return true;
                                                                          ^~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:273:74: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:274:12: error: 'false' undeclared (first use in this function)
     return false;
            ^~~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c: In function 'insertop':
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:278:17: error: too few arguments to function 'novop'
 void insertop(){novop();}
                 ^~~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:29:12: note: declared here
 struct no* novop(int info, char op) {
            ^~~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c: In function 'cartree':
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:281:15: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
  char opstack[strlen(exp)];
               ^~~~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:281:15: warning: incompatible implicit declaration of built-in function 'strlen'
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:281:15: note: include '<string.h>' or provide a declaration of 'strlen'
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:284:2: error: expected expression before '}' token
  }
  ^
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:286:39: error: expected identifier or '(' before '=' token
   if (!isOperator(exp[i])) {struct no = novono(altoi(exp[i]));} //Número
                                       ^
